--- a/05_grid_search_SARIMA_car_sales_13_6.ipynb
+++ b/05_grid_search_SARIMA_car_sales_13_6.ipynb
@@ -6,7 +6,7 @@
       "name": "05_grid_search_SARIMA_car_sales_13_6.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMz9cPgD4iFx8YkhXb3baWB",
+      "authorship_tag": "ABX9TyP52oNwuQLyIWi+RquKvKQB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30926b23-3bb7-4925-bef4-3cf34d276c64"
+        "outputId": "c8338eec-267d-4e49-8a77-9ecd7ee42f39"
       },
       "source": [
         "from math import sqrt\r\n",
@@ -191,7 +191,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8xyaJcGBtdE7",
-        "outputId": "f9d2f9d8-8469-40a4-f694-2792ff050c24"
+        "outputId": "a24e7efc-f2cd-4fa1-b983-ecaf365c34e0"
       },
       "source": [
         "walk_forward_validation(data,n_test,cfg)"
@@ -213,7 +213,7 @@
         "id": "Mfrl3bFgs9W9"
       },
       "source": [
-        "load dataset for quarterly sales prediction\r\n",
+        "load dataset for weekly sales prediction\r\n",
         "\r\n"
       ]
     },
@@ -226,7 +226,7 @@
         "series = read_excel('/content/Sales-weekly.xlsx', header=0, index_col=0)\r\n",
         "data = series.values\r\n",
         "# data split\r\n",
-        "n_test = 4"
+        "n_test = 12"
       ],
       "execution_count": 7,
       "outputs": []
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4jc3y7HVt5GI",
-        "outputId": "fd5eb454-504b-4c10-b6b4-cdc841461882"
+        "outputId": "7b7cfc7b-23a8-4bc8-f774-460045ba7448"
       },
       "source": [
         "walk_forward_validation(data,n_test,cfg)"
@@ -277,7 +277,7 @@
         {
           "output_type": "stream",
           "text": [
-            "RMSE : 78919.94556306029\n"
+            "RMSE : 47878.55481780116\n"
           ],
           "name": "stdout"
         }
@@ -291,7 +291,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
