--- a/cnn_encoder_decoder_LSTM_20_9.ipynb
+++ b/cnn_encoder_decoder_LSTM_20_9.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cnn_encoder_decoder_LSTM_20_9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMU0f6r4L2DHY5MPXTaf04Y",
+      "authorship_tag": "ABX9TyPLSwl521rAZt3bb6p+XdEX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "\tinput_x = data[-n_input:, 0]\r\n",
         "\t# reshape into [1, n_input, 1]\r\n",
         "\tinput_x = input_x.reshape((1, len(input_x), 1))\r\n",
-        "\t# forecast the next week\r\n",
+        "\t# forecast the next sequence\r\n",
         "\tyhat = model.predict(input_x, verbose=0)\r\n",
         "\t# we only want the vector forecast\r\n",
         "\tyhat = yhat[0]\r\n",
@@ -216,9 +216,9 @@
         "def evaluate_model(train, test, n_input, n_out):\r\n",
         "\t# fit model\r\n",
         "\tmodel = build_model(train, n_input, n_out)\r\n",
-        "\t# history is a list of weekly data\r\n",
+        "\t# history is a list of data\r\n",
         "\thistory = [x for x in train]\r\n",
-        "\t# walk-forward validation over each week\r\n",
+        "\t# walk-forward validation \r\n",
         "\tpredictions = list()\r\n",
         "\tfor i in range(len(test)):\r\n",
         "\t\t# predict the week\r\n",
